# mcp-google-workspace

./: .env.sample  Cargo.toml  LICENSE
src/: auth.rs  client.rs  lib.rs  logging.rs  main.rs
src/servers/: drive.rs  sheets.rs
src/tests/: drive.rs  mod.rs  sheets.rs
