[package]
name = "mcp-google-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
async-mcp = { version = "0.1.0" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing-subscriber = { version = "0.3.0", features = [
  "env-filter",
  "tracing-log",
] }
tracing = "0.1"
url = "2.5.4"
google-sheets4 = { version = "6.0", features = ["default"] }
google-drive3 = "6.0.0"
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.12.2", default-features = false, features = [
  "json",
  "stream",
] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.11"
rand = "0.8"
base64 = "0.21"
urlencoding = "2.1.0"

[dev-dependencies]
dotenv = "0.15"

[[bin]]
name = "mcp-google"
path = "src/main.rs"
